src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Verify_TX_Insurer__c</fullName>
        <formula>IF (or( contains( Insurance_Company_Name__c , &quot;BC&quot;), contains ( Insurance_Company_Name__c , &quot;BCBS&quot;) , contains ( Insurance_Company_Name__c, &quot;bcbs&quot;) , contains ( Insurance_Company_Name__c , &quot;Blue&quot;),contains ( Insurance_Company_Name__c , &quot;blue&quot;),contains ( Insurance_Company_Name__c , &quot;Anthem&quot;),contains ( Insurance_Company_Name__c , &quot;ANTHEM&quot;),contains ( Insurance_Company_Name__c , &quot;bc&quot;) , (Insurance_Company_Name__c = &quot;Empire&quot;) , (Insurance_Company_Name__c = &quot;EMPIRE&quot;) ,contains ( Insurance_Company_Name__c , &quot;Independence&quot;) ,contains (Insurance_Company_Name__c, &quot;INDEPENDENCE&quot;) ,contains ( Insurance_Company_Name__c , &quot;Carefirst&quot;),contains( Insurance_Company_Name__c , &quot;Horizon&quot;),contains( Insurance_Company_Name__c , &quot;HORIZON&quot;),contains( Insurance_Company_Name__c , &quot;Keystone&quot;),contains( Insurance_Company_Name__c , &quot;KEYSTONE&quot;), contains( Insurance_Company_Name__c , &quot;Highmark&quot;),contains (Insurance_Company_Name__c , &quot;Premera&quot;), contains( Insurance_Company_Name__c , &quot;CAREFIRST&quot;), contains( Insurance_Company_Name__c , &quot;HIGHMARK&quot;), contains ( Insurance_Company_Name__c , &quot;PREMERA&quot;), contains (Insurance_Company_Name__c, &quot;IBC&quot;),contains( Insurance_Company_Name__c , &quot;REGENCE&quot;), contains( Insurance_Company_Name__c , &quot;Regence&quot;), contains ( Insurance_Company_Name__c , &quot;WELLMARK&quot;), contains ( Insurance_Company_Name__c , &quot;Wellmark&quot;), contains ( Insurance_Company_Name__c , &quot;BS of California&quot;)), &quot;BLUE CROSS BLUE SHIED&quot;, IF (or (contains(Insurance_Company_Name__c , &quot;UHC&quot;), contains (Insurance_Company_Name__c , &quot;UBH&quot;), contains (Insurance_Company_Name__c , &quot;United Health Care&quot;), contains (Insurance_Company_Name__c,&quot;United Healthcare&quot;), contains (Insurance_Company_Name__c,&quot;united health care&quot;), contains (Insurance_Company_Name__c, &quot;UHC/Optum&quot;), contains(Insurance_Company_Name__c , &quot;uhc&quot;)),&quot;UnitedHealthCare&quot;, IF (or (contains (Insurance_Company_Name__c ,&quot;UPMC&quot;), contains (Insurance_Company_Name__c ,&quot;upmc&quot;)), &quot;UPMC HEALTH PLAN (TRISTATE)&quot;, IF (or (contains(Insurance_Company_Name__c ,&quot;GEHA&quot;), CONTAINS (Insurance_Company_Name__c, &quot;geha&quot;)), &quot;GOVERNENT EMPLOYEES HEALTH ASSOCIATION (GEHA)&quot;,IF (or (contains(Insurance_Company_Name__c ,&quot;Tricare&quot;), contains (Insurance_Company_Name__c,&quot;Tri-care&quot;), contains (Insurance_Company_Name__c, &quot;TriCare&quot;),contains (Insurance_Company_Name__c, &quot;TRICARE&quot;)), &quot;TRICARE EAST&quot;, IF (or (contains(Insurance_Company_Name__c ,&quot;Medica/UHC&quot;), (Insurance_Company_Name__c= &quot;medica&quot;)), &quot;MEDICA&quot;, IF (or (contains(Insurance_Company_Name__c ,&quot;Core Source&quot;), contains (Insurance_Company_Name__c, &quot;CORE SOURCE&quot;)), &quot;CORESOURCE (MD PA &amp; IL)&quot;, If (contains (Insurance_Company_Name__c,&quot;GHI&quot;), &quot;GHI&quot;, if (or (contains(Insurance_Company_Name__c, &quot;/Beacon&quot;), contains (Insurance_Company_Name__c, &quot;Empire Plan&quot;)), &quot;Beacon Health Options&quot;, Insurance_Company_Name__c )))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verify TX Insurer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Chat__c</fullName>
        <label>Web Chat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <label>Web Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Calls__c</fullName>
        <label>Website Calls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_Calling__c</fullName>
        <label>Who is Calling?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Caller_Client_Identity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>abb_last_name__c</fullName>
        <formula>left(LastName,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>abb last name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Facility_Interest__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <columns>VOB_Results_Back__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Pending_Admit_Date__c</columns>
        <columns>ETA__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>CCR_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Payment_Method__c</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility_Interest__c</field>
            <operation>includes</operation>
            <value>Center City Recovery</value>
        </filters>
        <label>CCR Leads</label>
    </listViews>
    <listViews>
        <fullName>Calls</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Caller_ID_Caller_Phone__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CTM_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Pending,Can_Not_Admit,Cold,Admissions_Alert_Sent,Admissions Alert Sent,Admitted</value>
        </filters>
        <label>Calls</label>
    </listViews>
    <listViews>
        <fullName>Good_to_Admit</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Facility_Interest__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>,OK to Admit - Arrange Admit,Pending_Admission</value>
        </filters>
        <label>Good to Admit</label>
    </listViews>
    <listViews>
        <fullName>Haven_Detox_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Facility_Interest__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility_Interest__c</field>
            <operation>includes</operation>
            <value>Haven Detox</value>
        </filters>
        <label>Haven Detox Leads</label>
    </listViews>
    <listViews>
        <fullName>ICFR_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility_Interest__c</field>
            <operation>includes</operation>
            <value>Indiana Center for Recovery</value>
        </filters>
        <label>ICFR Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Assignment_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Assignment</label>
        <queue>Lead_Assignment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>Needs_VOB</fullName>
        <booleanFilter>(1 or 3 or 4) and 2</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>VOB_Requested__c</columns>
        <columns>URGENT_VOB_REQUEST__c</columns>
        <columns>Secondary_VOB_Request__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VOB_Requested__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>VOB_Results_Back__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>URGENT_VOB_REQUEST__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Secondary_VOB_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Needs VOB</label>
    </listViews>
    <listViews>
        <fullName>Pending_Admits</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Facility_Interest__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <columns>Pending_Admit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Admissions_Alert_Sent,Admissions Alert Sent</value>
        </filters>
        <label>Pending Admits</label>
    </listViews>
    <listViews>
        <fullName>TRT_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility_Interest__c</field>
            <operation>includes</operation>
            <value>Recovery Team</value>
        </filters>
        <label>TRT Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Warm_Leads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>Facility_Interest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Member_ID_Number__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>Warm Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Refer_out</fullName>
        <active>true</active>
        <description>Checks if fields are filled out for refer out</description>
        <errorConditionFormula>Send_to_Refer_Outs__c  = true &amp;&amp;
(
ISBLANK(  Phone  ) ||
ISBLANK(  DOB__c  ) ||
ISBLANK(TEXT( Payment_Method__c ))
)</errorConditionFormula>
        <errorMessage>You cannot send a refer out email without a Phone #, DOB, and payment method.</errorMessage>
    </validationRules>
</CustomObject>